--- a/config/facebook.yml
+++ b/config/facebook.yml
@@ -1,9 +1,9 @@
 development: &defaults
-  client_id: 345907068783446
-  client_secret: 7d0f2285d80f3912d165348d6ba01222
+  client_id: 368903236462420
+  client_secret: aac84404773598f59e8ea27034f64018
   scope: user_about_me,user_activities,user_birthday,user_education_history,
          user_events,user_groups,user_hometown,user_interests,user_likes
-  canvas_url: http://apps.facebook.com/MyFirstRailsAppHere/
+  canvas_url: http://apps.facebook.com/FirstRailsApp/
 test:
   <<: *defaults
 production:
